// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`composition as should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-3 {
  border-radius: 4px;
  background-color: white;
  box-shadow: 0px 2px 4px 0px rgba(0,0,0,0.1),0px 0px 2px 1px rgba(0,0,0,0.02);
}

.emotion-0 {
  padding: 1.5rem;
}

<div
  aria-describedby="dialogDescription"
  class="emotion-3 emotion-1 emotion-2 fp-Box fp-Dialog"
>
  <div
    class="emotion-0 emotion-1 emotion-2 fp-Box fp-DialogContent"
    id="dialogDescription"
  >
    Hello world
  </div>
</div>
`;

exports[`composition hook should return with Dialog props 1`] = `
Object {
  "aria-describedby": undefined,
  "aria-labelledby": undefined,
  "children": <Context.Provider
    value={
      Object {
        "descriptionId": "",
        "titleId": "",
      }
    }
  >
    <React.Fragment>
      <ForwardRef />
    </React.Fragment>
  </Context.Provider>,
  "className": "css-qsuva4 css-1pwrqjj css-3ekj6a fp-Box fp-Dialog",
}
`;

exports[`composition render props should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0 {
  border-radius: 4px;
  background-color: white;
  box-shadow: 0px 2px 4px 0px rgba(0,0,0,0.1),0px 0px 2px 1px rgba(0,0,0,0.02);
}

<div
  aria-describedby="dialogDescription"
  class="emotion-0 emotion-1 emotion-2 fp-Box fp-Dialog"
>
  Hello world
</div>
`;

exports[`defaultProps should render correctly for className 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-3 {
  border-radius: 4px;
  background-color: white;
  box-shadow: 0px 2px 4px 0px rgba(0,0,0,0.1),0px 0px 2px 1px rgba(0,0,0,0.02);
}

.emotion-0 {
  padding: 1.5rem;
}

.emotion-5 {
  color: #3722ed !important;
}

<div
  aria-describedby="dialogDescription"
  class="emotion-3 emotion-1 emotion-5 test fp-Box fp-Dialog"
>
  <div
    class="emotion-0 emotion-1 emotion-2 fp-Box fp-DialogContent"
    id="dialogDescription"
  >
    hello world
  </div>
</div>
`;

exports[`overrides Dialog.Close.root should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-3 {
  border-radius: 4px;
  background-color: white;
  box-shadow: 0px 2px 4px 0px rgba(0,0,0,0.1),0px 0px 2px 1px rgba(0,0,0,0.02);
}

.emotion-0 {
  padding: 1.5rem;
}

<div
  aria-describedby="dialogDescription"
  class="emotion-3 emotion-1 emotion-2 fp-Box fp-Dialog"
>
  <div
    class="emotion-0 emotion-1 emotion-2 fp-Box fp-DialogContent"
    id="dialogDescription"
  >
    hello world
  </div>
</div>
`;

exports[`overrides Dialog.Content.root should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-3 {
  border-radius: 4px;
  background-color: white;
  box-shadow: 0px 2px 4px 0px rgba(0,0,0,0.1),0px 0px 2px 1px rgba(0,0,0,0.02);
}

.emotion-0 {
  padding: 1.5rem;
}

.emotion-0 {
  background-color: red;
}

<div
  aria-describedby="dialogDescription"
  class="emotion-3 emotion-1 emotion-2 fp-Box fp-Dialog"
>
  <div
    class="emotion-0 emotion-1 emotion-2 fp-Box fp-DialogContent"
    id="dialogDescription"
  >
    hello world
  </div>
</div>
`;

exports[`overrides Dialog.Footer.root should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-8 {
  border-radius: 4px;
  background-color: white;
  box-shadow: 0px 2px 4px 0px rgba(0,0,0,0.1),0px 0px 2px 1px rgba(0,0,0,0.02);
}

.emotion-0 {
  padding: 1.5rem;
}

.emotion-5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-top: 1px solid #e6e6e6;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 1.25rem 1.5rem;
}

.emotion-5 {
  background-color: red;
}

<div
  aria-describedby="dialogDescription"
  class="emotion-8 emotion-1 emotion-2 fp-Box fp-Dialog"
>
  <div
    class="emotion-0 emotion-1 emotion-2 fp-Box fp-DialogContent"
    id="dialogDescription"
  >
    hello world
  </div>
  <div
    class="emotion-5 emotion-1 emotion-2 fp-Box fp-DialogFooter"
  >
    <div
      class="emotion-1 emotion-2 fp-Box"
    >
      This is a footer
    </div>
  </div>
</div>
`;

exports[`overrides Dialog.Header.root should render correctly 1`] = `
.emotion-2 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-2:focus:not(:focus-visible) {
  outline: none;
}

.emotion-10 {
  border-radius: 4px;
  background-color: white;
  box-shadow: 0px 2px 4px 0px rgba(0,0,0,0.1),0px 0px 2px 1px rgba(0,0,0,0.02);
}

.emotion-7 {
  padding: 1.5rem;
}

abbr.emotion-1 {
  border-bottom: 1px dotted;
  cursor: help;
  -webkit-text-decoration: none;
  text-decoration: none;
}

code.emotion-1 {
  font-family: monospace;
}

i.emotion-1 {
  font-style: italic;
}

kbd.emotion-1 {
  background: #454d5d;
  border-radius: 0.1rem;
  color: #fff;
  fill: #fff;
  padding: 0.1rem 0.2rem;
}

mark.emotion-1 {
  background: #ffe9b3;
  border-radius: 0.1rem;
  padding: 0.1rem 0.2rem;
}

strong.emotion-1 {
  font-weight: bold;
}

sub.emotion-1,
sup.emotion-1 {
  font-size: 0.8em;
  vertical-align: baseline;
}

ins.emotion-1,
u.emotion-1 {
  -webkit-text-decoration-skip: ink edges;
  text-decoration-skip: ink edges;
}

i.emotion-1,
cite.emotion-1,
var.emotion-1,
em.emotion-1 {
  font-style: italic;
}

kbd.emotion-1,
pre.emotion-1,
samp.emotion-1 {
  font-family: 'SF Mono','Segoe UI Mono','Roboto Mono',Menlo,Courier,monospace;
}

.emotion-1 .fp-Icon {
  vertical-align: -0.125em;
}

.emotion-0 {
  font-size: 1.25em;
  font-weight: 600;
}

.emotion-4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  border-bottom: 1px solid #e6e6e6;
  padding: 1.25rem 1.5rem;
}

.emotion-4 {
  background-color: red;
}

<div
  aria-describedby="dialogDescription"
  aria-labelledby="dialogTitle"
  class="emotion-10 emotion-2 emotion-3 fp-Box fp-Dialog"
>
  <div
    class="emotion-4 emotion-2 emotion-3 fp-Box fp-DialogHeader"
  >
    <span
      class="emotion-0 emotion-1 emotion-2 emotion-3 fp-Box fp-Text fp-DialogTitle"
      id="dialogTitle"
    >
      This is a title
    </span>
  </div>
  <div
    class="emotion-7 emotion-2 emotion-3 fp-Box fp-DialogContent"
    id="dialogDescription"
  >
    hello world
  </div>
</div>
`;

exports[`overrides Dialog.IconWrapper.root should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-3 {
  border-radius: 4px;
  background-color: white;
  box-shadow: 0px 2px 4px 0px rgba(0,0,0,0.1),0px 0px 2px 1px rgba(0,0,0,0.02);
}

.emotion-0 {
  padding: 1.5rem;
}

<div
  aria-describedby="dialogDescription"
  class="emotion-3 emotion-1 emotion-2 fp-Box fp-Dialog"
>
  <div
    class="emotion-0 emotion-1 emotion-2 fp-Box fp-DialogContent"
    id="dialogDescription"
  >
    hello world
  </div>
</div>
`;

exports[`overrides Dialog.Title.root should render correctly 1`] = `
.emotion-2 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-2:focus:not(:focus-visible) {
  outline: none;
}

.emotion-10 {
  border-radius: 4px;
  background-color: white;
  box-shadow: 0px 2px 4px 0px rgba(0,0,0,0.1),0px 0px 2px 1px rgba(0,0,0,0.02);
}

.emotion-7 {
  padding: 1.5rem;
}

.emotion-4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  border-bottom: 1px solid #e6e6e6;
  padding: 1.25rem 1.5rem;
}

abbr.emotion-1 {
  border-bottom: 1px dotted;
  cursor: help;
  -webkit-text-decoration: none;
  text-decoration: none;
}

code.emotion-1 {
  font-family: monospace;
}

i.emotion-1 {
  font-style: italic;
}

kbd.emotion-1 {
  background: #454d5d;
  border-radius: 0.1rem;
  color: #fff;
  fill: #fff;
  padding: 0.1rem 0.2rem;
}

mark.emotion-1 {
  background: #ffe9b3;
  border-radius: 0.1rem;
  padding: 0.1rem 0.2rem;
}

strong.emotion-1 {
  font-weight: bold;
}

sub.emotion-1,
sup.emotion-1 {
  font-size: 0.8em;
  vertical-align: baseline;
}

ins.emotion-1,
u.emotion-1 {
  -webkit-text-decoration-skip: ink edges;
  text-decoration-skip: ink edges;
}

i.emotion-1,
cite.emotion-1,
var.emotion-1,
em.emotion-1 {
  font-style: italic;
}

kbd.emotion-1,
pre.emotion-1,
samp.emotion-1 {
  font-family: 'SF Mono','Segoe UI Mono','Roboto Mono',Menlo,Courier,monospace;
}

.emotion-1 .fp-Icon {
  vertical-align: -0.125em;
}

.emotion-0 {
  font-size: 1.25em;
  font-weight: 600;
}

.emotion-0 {
  background-color: red;
}

<div
  aria-describedby="dialogDescription"
  aria-labelledby="dialogTitle"
  class="emotion-10 emotion-2 emotion-3 fp-Box fp-Dialog"
>
  <div
    class="emotion-4 emotion-2 emotion-3 fp-Box fp-DialogHeader"
  >
    <span
      class="emotion-0 emotion-1 emotion-2 emotion-3 fp-Box fp-Text fp-DialogTitle"
      id="dialogTitle"
    >
      This is a title
    </span>
  </div>
  <div
    class="emotion-7 emotion-2 emotion-3 fp-Box fp-DialogContent"
    id="dialogDescription"
  >
    hello world
  </div>
</div>
`;

exports[`overrides Dialog.root should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0 {
  padding: 1.5rem;
}

.emotion-3 {
  border-radius: 4px;
  background-color: white;
  box-shadow: 0px 2px 4px 0px rgba(0,0,0,0.1),0px 0px 2px 1px rgba(0,0,0,0.02);
}

.emotion-3 {
  background-color: red;
}

<div
  aria-describedby="dialogDescription"
  class="emotion-3 emotion-1 emotion-2 fp-Box fp-Dialog"
>
  <div
    class="emotion-0 emotion-1 emotion-2 fp-Box fp-DialogContent"
    id="dialogDescription"
  >
    hello world
  </div>
</div>
`;

exports[`props should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-3 {
  border-radius: 4px;
  background-color: white;
  box-shadow: 0px 2px 4px 0px rgba(0,0,0,0.1),0px 0px 2px 1px rgba(0,0,0,0.02);
}

.emotion-0 {
  padding: 1.5rem;
}

<div
  aria-describedby="dialogDescription"
  class="emotion-3 emotion-1 emotion-2 fp-Box fp-Dialog"
>
  <div
    class="emotion-0 emotion-1 emotion-2 fp-Box fp-DialogContent"
    id="dialogDescription"
  >
    Hello world
  </div>
</div>
`;

exports[`props should render correctly for standalone 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-20 {
  border-radius: 4px;
  background-color: white;
  box-shadow: 0px 2px 4px 0px rgba(0,0,0,0.1),0px 0px 2px 1px rgba(0,0,0,0.02);
}

.emotion-14 {
  padding: 1.5rem;
}

.emotion-11 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  border-bottom: 1px solid #e6e6e6;
  padding: 1.25rem 1.5rem;
}

abbr.emotion-4 {
  border-bottom: 1px dotted;
  cursor: help;
  -webkit-text-decoration: none;
  text-decoration: none;
}

code.emotion-4 {
  font-family: monospace;
}

i.emotion-4 {
  font-style: italic;
}

kbd.emotion-4 {
  background: #454d5d;
  border-radius: 0.1rem;
  color: #fff;
  fill: #fff;
  padding: 0.1rem 0.2rem;
}

mark.emotion-4 {
  background: #ffe9b3;
  border-radius: 0.1rem;
  padding: 0.1rem 0.2rem;
}

strong.emotion-4 {
  font-weight: bold;
}

sub.emotion-4,
sup.emotion-4 {
  font-size: 0.8em;
  vertical-align: baseline;
}

ins.emotion-4,
u.emotion-4 {
  -webkit-text-decoration-skip: ink edges;
  text-decoration-skip: ink edges;
}

i.emotion-4,
cite.emotion-4,
var.emotion-4,
em.emotion-4 {
  font-style: italic;
}

kbd.emotion-4,
pre.emotion-4,
samp.emotion-4 {
  font-family: 'SF Mono','Segoe UI Mono','Roboto Mono',Menlo,Courier,monospace;
}

.emotion-4 .fp-Icon {
  vertical-align: -0.125em;
}

.emotion-7 {
  font-size: 1.25em;
  font-weight: 600;
}

.emotion-17 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-top: 1px solid #e6e6e6;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 1.25rem 1.5rem;
}

.emotion-3 {
  margin-right: 1rem;
}

.emotion-2 {
  color: #1e67d5 !important;
}

.emotion-0 {
  fill: #1e67d5;
  position: relative;
  height: 1em;
  width: 1em;
}

.emotion-22 {
  width: 600px !important;
}

<div
  aria-describedby="dialogDescription"
  aria-labelledby="dialogTitle"
  class="emotion-20 emotion-1 emotion-22 fp-Box fp-Dialog"
>
  <div
    class="emotion-11 emotion-1 emotion-6 fp-Box fp-DialogHeader"
  >
    <span
      class="emotion-7 emotion-4 emotion-1 emotion-6 fp-Box fp-Text fp-DialogTitle"
      id="dialogTitle"
    >
      <span
        class="emotion-3 emotion-4 emotion-1 emotion-6 fp-Box fp-Text fp-DialogIconWrapper"
      >
        <svg
          aria-hidden="true"
          class="emotion-0 emotion-1 emotion-2 fp-Box fp-Icon"
          role="img"
          viewBox="0 0 512 512"
        >
          <path
            d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
            fill="currentColor"
            fill-rule="evenodd"
          />
        </svg>
      </span>
      Example Dialog
    </span>
  </div>
  <div
    class="emotion-14 emotion-1 emotion-6 fp-Box fp-DialogContent"
    id="dialogDescription"
  >
    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse diam ipsum, cursus id placerat congue, ultrices eget lectus. Duis posuere, lacus sed tristique commodo, sapien turpis mollis nunc, vestibulum consectetur lectus augue sit amet justo.
  </div>
  <div
    class="emotion-17 emotion-1 emotion-6 fp-Box fp-DialogFooter"
  >
    This is a footer
  </div>
</div>
`;

exports[`props should render correctly with CSS props 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-3 {
  border-radius: 4px;
  background-color: white;
  box-shadow: 0px 2px 4px 0px rgba(0,0,0,0.1),0px 0px 2px 1px rgba(0,0,0,0.02);
}

.emotion-0 {
  padding: 1.5rem;
}

.emotion-5 {
  color: #3722ed !important;
}

<div
  aria-describedby="dialogDescription"
  class="emotion-3 emotion-1 emotion-5 fp-Box fp-Dialog"
>
  <div
    class="emotion-0 emotion-1 emotion-2 fp-Box fp-DialogContent"
    id="dialogDescription"
  >
    Hello world
  </div>
</div>
`;

exports[`props should render correctly with a close button 1`] = `
.emotion-2 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-2:focus:not(:focus-visible) {
  outline: none;
}

.emotion-17 {
  border-radius: 4px;
  background-color: white;
  box-shadow: 0px 2px 4px 0px rgba(0,0,0,0.1),0px 0px 2px 1px rgba(0,0,0,0.02);
}

.emotion-14 {
  padding: 1.5rem;
}

.emotion-11 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  border-bottom: 1px solid #e6e6e6;
  padding: 1.25rem 1.5rem;
}

abbr.emotion-1 {
  border-bottom: 1px dotted;
  cursor: help;
  -webkit-text-decoration: none;
  text-decoration: none;
}

code.emotion-1 {
  font-family: monospace;
}

i.emotion-1 {
  font-style: italic;
}

kbd.emotion-1 {
  background: #454d5d;
  border-radius: 0.1rem;
  color: #fff;
  fill: #fff;
  padding: 0.1rem 0.2rem;
}

mark.emotion-1 {
  background: #ffe9b3;
  border-radius: 0.1rem;
  padding: 0.1rem 0.2rem;
}

strong.emotion-1 {
  font-weight: bold;
}

sub.emotion-1,
sup.emotion-1 {
  font-size: 0.8em;
  vertical-align: baseline;
}

ins.emotion-1,
u.emotion-1 {
  -webkit-text-decoration-skip: ink edges;
  text-decoration-skip: ink edges;
}

i.emotion-1,
cite.emotion-1,
var.emotion-1,
em.emotion-1 {
  font-style: italic;
}

kbd.emotion-1,
pre.emotion-1,
samp.emotion-1 {
  font-family: 'SF Mono','Segoe UI Mono','Roboto Mono',Menlo,Courier,monospace;
}

.emotion-1 .fp-Icon {
  vertical-align: -0.125em;
}

.emotion-0 {
  font-size: 1.25em;
  font-weight: 600;
}

.emotion-8 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #fcfcfc;
  border-radius: 4px;
  color: #212121;
  fill: #212121;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-weight: 600;
  min-height: 2.5em;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0 0.8rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-hyphens: auto;
  -moz-hyphens: auto;
  -ms-hyphens: auto;
  hyphens: auto;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border 0.1s,background-color 0.1s;
  border: 1px solid #d9d9d9;
}

.emotion-8[disabled],
.emotion-8[aria-disabled="true"] {
  cursor: not-allowed;
  opacity: 0.7;
  outline: unset;
  pointer-events: unset;
}

.emotion-8:focus {
  outline: unset;
  z-index: 2;
  box-shadow: gray 0px 0px 0px 1px, #a6a6a6 0px 0px 0px 3px;
  border-color: transparent;
}

.emotion-8:hover {
  background-color: #efefef;
}

.emotion-8:hover:active {
  background-color: #d6d6d6;
}

.emotion-8 {
  background-color: unset;
  border: unset;
  color: #212121;
  fill: #212121;
}

.emotion-8:hover {
  background-color: rgba(0,0,0,0.05);
}

.emotion-8:hover:active {
  background-color: rgba(0,0,0,0.1);
}

.emotion-7.emotion-7 {
  min-height: unset;
  padding: 0.5em;
}

.emotion-6 {
  font-size: 1.25em !important;
}

.emotion-4 {
  fill: inherit;
  position: relative;
  height: 1em;
  width: 1em;
}

<div
  aria-describedby="dialogDescription"
  aria-labelledby="dialogTitle"
  class="emotion-17 emotion-2 emotion-3 fp-Box fp-Dialog"
>
  <div
    class="emotion-11 emotion-2 emotion-3 fp-Box fp-DialogHeader"
  >
    <span
      class="emotion-0 emotion-1 emotion-2 emotion-3 fp-Box fp-Text fp-DialogTitle"
      id="dialogTitle"
    >
      Hello world
    </span>
    <button
      aria-disabled="false"
      class="emotion-7 emotion-8 emotion-2 emotion-3 test fp-Box fp-Button fp-ButtonClose"
      type="button"
    >
      <svg
        class="emotion-4 emotion-2 emotion-6 fp-Box fp-Icon"
        role="img"
        viewBox="0 0 320 512"
      >
        <path
          d="M193.94 256L296.5 153.44l21.15-21.15c3.12-3.12 3.12-8.19 0-11.31l-22.63-22.63c-3.12-3.12-8.19-3.12-11.31 0L160 222.06 36.29 98.34c-3.12-3.12-8.19-3.12-11.31 0L2.34 120.97c-3.12 3.12-3.12 8.19 0 11.31L126.06 256 2.34 379.71c-3.12 3.12-3.12 8.19 0 11.31l22.63 22.63c3.12 3.12 8.19 3.12 11.31 0L160 289.94 262.56 392.5l21.15 21.15c3.12 3.12 8.19 3.12 11.31 0l22.63-22.63c3.12-3.12 3.12-8.19 0-11.31L193.94 256z"
          fill="currentColor"
          fill-rule="evenodd"
        />
      </svg>
      <span
        style="border: 0px; height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; white-space: nowrap; width: 1px;"
      >
        Close
      </span>
    </button>
  </div>
  <div
    class="emotion-14 emotion-2 emotion-3 fp-Box fp-DialogContent"
    id="dialogDescription"
  >
    Hello world
  </div>
</div>
`;

exports[`props should render correctly with a footer 1`] = `
.emotion-2 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-2:focus:not(:focus-visible) {
  outline: none;
}

.emotion-15 {
  border-radius: 4px;
  background-color: white;
  box-shadow: 0px 2px 4px 0px rgba(0,0,0,0.1),0px 0px 2px 1px rgba(0,0,0,0.02);
}

.emotion-7 {
  padding: 1.5rem;
}

.emotion-4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  border-bottom: 1px solid #e6e6e6;
  padding: 1.25rem 1.5rem;
}

abbr.emotion-1 {
  border-bottom: 1px dotted;
  cursor: help;
  -webkit-text-decoration: none;
  text-decoration: none;
}

code.emotion-1 {
  font-family: monospace;
}

i.emotion-1 {
  font-style: italic;
}

kbd.emotion-1 {
  background: #454d5d;
  border-radius: 0.1rem;
  color: #fff;
  fill: #fff;
  padding: 0.1rem 0.2rem;
}

mark.emotion-1 {
  background: #ffe9b3;
  border-radius: 0.1rem;
  padding: 0.1rem 0.2rem;
}

strong.emotion-1 {
  font-weight: bold;
}

sub.emotion-1,
sup.emotion-1 {
  font-size: 0.8em;
  vertical-align: baseline;
}

ins.emotion-1,
u.emotion-1 {
  -webkit-text-decoration-skip: ink edges;
  text-decoration-skip: ink edges;
}

i.emotion-1,
cite.emotion-1,
var.emotion-1,
em.emotion-1 {
  font-style: italic;
}

kbd.emotion-1,
pre.emotion-1,
samp.emotion-1 {
  font-family: 'SF Mono','Segoe UI Mono','Roboto Mono',Menlo,Courier,monospace;
}

.emotion-1 .fp-Icon {
  vertical-align: -0.125em;
}

.emotion-0 {
  font-size: 1.25em;
  font-weight: 600;
}

.emotion-12 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-top: 1px solid #e6e6e6;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 1.25rem 1.5rem;
}

<div
  aria-describedby="dialogDescription"
  aria-labelledby="dialogTitle"
  class="emotion-15 emotion-2 emotion-3 fp-Box fp-Dialog"
>
  <div
    class="emotion-4 emotion-2 emotion-3 fp-Box fp-DialogHeader"
  >
    <span
      class="emotion-0 emotion-1 emotion-2 emotion-3 fp-Box fp-Text fp-DialogTitle"
      id="dialogTitle"
    >
      Hello world
    </span>
  </div>
  <div
    class="emotion-7 emotion-2 emotion-3 fp-Box fp-DialogContent"
    id="dialogDescription"
  >
    Hello world
  </div>
  <div
    class="emotion-12 emotion-2 emotion-3 fp-Box fp-DialogFooter"
  >
    <div
      class="emotion-2 emotion-3 fp-Box"
    >
      This is a footer
    </div>
  </div>
</div>
`;

exports[`props should render correctly with a title 1`] = `
.emotion-2 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-2:focus:not(:focus-visible) {
  outline: none;
}

.emotion-10 {
  border-radius: 4px;
  background-color: white;
  box-shadow: 0px 2px 4px 0px rgba(0,0,0,0.1),0px 0px 2px 1px rgba(0,0,0,0.02);
}

.emotion-7 {
  padding: 1.5rem;
}

.emotion-4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  border-bottom: 1px solid #e6e6e6;
  padding: 1.25rem 1.5rem;
}

abbr.emotion-1 {
  border-bottom: 1px dotted;
  cursor: help;
  -webkit-text-decoration: none;
  text-decoration: none;
}

code.emotion-1 {
  font-family: monospace;
}

i.emotion-1 {
  font-style: italic;
}

kbd.emotion-1 {
  background: #454d5d;
  border-radius: 0.1rem;
  color: #fff;
  fill: #fff;
  padding: 0.1rem 0.2rem;
}

mark.emotion-1 {
  background: #ffe9b3;
  border-radius: 0.1rem;
  padding: 0.1rem 0.2rem;
}

strong.emotion-1 {
  font-weight: bold;
}

sub.emotion-1,
sup.emotion-1 {
  font-size: 0.8em;
  vertical-align: baseline;
}

ins.emotion-1,
u.emotion-1 {
  -webkit-text-decoration-skip: ink edges;
  text-decoration-skip: ink edges;
}

i.emotion-1,
cite.emotion-1,
var.emotion-1,
em.emotion-1 {
  font-style: italic;
}

kbd.emotion-1,
pre.emotion-1,
samp.emotion-1 {
  font-family: 'SF Mono','Segoe UI Mono','Roboto Mono',Menlo,Courier,monospace;
}

.emotion-1 .fp-Icon {
  vertical-align: -0.125em;
}

.emotion-0 {
  font-size: 1.25em;
  font-weight: 600;
}

<div
  aria-describedby="dialogDescription"
  aria-labelledby="dialogTitle"
  class="emotion-10 emotion-2 emotion-3 fp-Box fp-Dialog"
>
  <div
    class="emotion-4 emotion-2 emotion-3 fp-Box fp-DialogHeader"
  >
    <span
      class="emotion-0 emotion-1 emotion-2 emotion-3 fp-Box fp-Text fp-DialogTitle"
      id="dialogTitle"
    >
      This is a dialog
    </span>
  </div>
  <div
    class="emotion-7 emotion-2 emotion-3 fp-Box fp-DialogContent"
    id="dialogDescription"
  >
    Hello world
  </div>
</div>
`;

exports[`props should render correctly with action buttons 1`] = `
.emotion-2 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-2:focus:not(:focus-visible) {
  outline: none;
}

.emotion-25 {
  border-radius: 4px;
  background-color: white;
  box-shadow: 0px 2px 4px 0px rgba(0,0,0,0.1),0px 0px 2px 1px rgba(0,0,0,0.02);
}

.emotion-7 {
  padding: 1.5rem;
}

.emotion-4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  border-bottom: 1px solid #e6e6e6;
  padding: 1.25rem 1.5rem;
}

abbr.emotion-1 {
  border-bottom: 1px dotted;
  cursor: help;
  -webkit-text-decoration: none;
  text-decoration: none;
}

code.emotion-1 {
  font-family: monospace;
}

i.emotion-1 {
  font-style: italic;
}

kbd.emotion-1 {
  background: #454d5d;
  border-radius: 0.1rem;
  color: #fff;
  fill: #fff;
  padding: 0.1rem 0.2rem;
}

mark.emotion-1 {
  background: #ffe9b3;
  border-radius: 0.1rem;
  padding: 0.1rem 0.2rem;
}

strong.emotion-1 {
  font-weight: bold;
}

sub.emotion-1,
sup.emotion-1 {
  font-size: 0.8em;
  vertical-align: baseline;
}

ins.emotion-1,
u.emotion-1 {
  -webkit-text-decoration-skip: ink edges;
  text-decoration-skip: ink edges;
}

i.emotion-1,
cite.emotion-1,
var.emotion-1,
em.emotion-1 {
  font-style: italic;
}

kbd.emotion-1,
pre.emotion-1,
samp.emotion-1 {
  font-family: 'SF Mono','Segoe UI Mono','Roboto Mono',Menlo,Courier,monospace;
}

.emotion-1 .fp-Icon {
  vertical-align: -0.125em;
}

.emotion-0 {
  font-size: 1.25em;
  font-weight: 600;
}

.emotion-22 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-top: 1px solid #e6e6e6;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 1.25rem 1.5rem;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.emotion-17 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-left: -0.5rem;
  margin-top: -0.5rem;
}

.emotion-17.emotion-17.emotion-17 > * {
  margin-left: 0.5rem;
  margin-top: 0.5rem;
}

.emotion-10 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #fcfcfc;
  border-radius: 4px;
  color: #212121;
  fill: #212121;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-weight: 600;
  min-height: 2.5em;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0 0.8rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-hyphens: auto;
  -moz-hyphens: auto;
  -ms-hyphens: auto;
  hyphens: auto;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border 0.1s,background-color 0.1s;
  border: 1px solid #d9d9d9;
}

.emotion-10[disabled],
.emotion-10[aria-disabled="true"] {
  cursor: not-allowed;
  opacity: 0.7;
  outline: unset;
  pointer-events: unset;
}

.emotion-10:focus {
  outline: unset;
  z-index: 2;
  box-shadow: gray 0px 0px 0px 1px, #a6a6a6 0px 0px 0px 3px;
  border-color: transparent;
}

.emotion-10:hover {
  background-color: #efefef;
}

.emotion-10:hover:active {
  background-color: #d6d6d6;
}

.emotion-13 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #bb2a1a;
  border-radius: 4px;
  color: #fff;
  fill: #fff;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-weight: 600;
  min-height: 2.5em;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0 0.8rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-hyphens: auto;
  -moz-hyphens: auto;
  -ms-hyphens: auto;
  hyphens: auto;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border 0.1s,background-color 0.1s;
}

.emotion-13[disabled],
.emotion-13[aria-disabled="true"] {
  cursor: not-allowed;
  opacity: 0.7;
  outline: unset;
  pointer-events: unset;
}

.emotion-13:focus {
  outline: unset;
  z-index: 2;
  box-shadow: #bb2a1a 0px 0px 0px 1px, #dd948c 0px 0px 0px 3px;
}

.emotion-13:hover {
  background-color: #a52517;
}

.emotion-13:hover:active {
  background-color: #781b11;
}

<div
  aria-describedby="dialogDescription"
  aria-labelledby="dialogTitle"
  class="emotion-25 emotion-2 emotion-3 fp-Box fp-Dialog"
>
  <div
    class="emotion-4 emotion-2 emotion-3 fp-Box fp-DialogHeader"
  >
    <span
      class="emotion-0 emotion-1 emotion-2 emotion-3 fp-Box fp-Text fp-DialogTitle"
      id="dialogTitle"
    >
      Hello world
    </span>
  </div>
  <div
    class="emotion-7 emotion-2 emotion-3 fp-Box fp-DialogContent"
    id="dialogDescription"
  >
    Hello world
  </div>
  <div
    class="emotion-22 emotion-2 emotion-3 fp-Box fp-DialogFooter"
  >
    <div
      class="emotion-2 emotion-3 fp-Box"
    >
      <div
        class="emotion-16 emotion-17 emotion-2 emotion-3 fp-Box fp-ActionButtons fp-Set"
      >
        <button
          aria-disabled="false"
          class="emotion-10 emotion-2 emotion-3 fp-Box fp-ActionButtonsButton fp-Button"
          type="button"
        >
          Cancel
        </button>
        <button
          aria-disabled="false"
          class="emotion-13 emotion-2 emotion-3 fp-Box fp-ActionButtonsButton fp-Button"
          type="submit"
        >
          Submit
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`props type should render correctly with type danger 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-17 {
  border-radius: 4px;
  background-color: white;
  box-shadow: 0px 2px 4px 0px rgba(0,0,0,0.1),0px 0px 2px 1px rgba(0,0,0,0.02);
}

.emotion-14 {
  padding: 1.5rem;
}

.emotion-11 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  border-bottom: 1px solid #e6e6e6;
  padding: 1.25rem 1.5rem;
}

abbr.emotion-4 {
  border-bottom: 1px dotted;
  cursor: help;
  -webkit-text-decoration: none;
  text-decoration: none;
}

code.emotion-4 {
  font-family: monospace;
}

i.emotion-4 {
  font-style: italic;
}

kbd.emotion-4 {
  background: #454d5d;
  border-radius: 0.1rem;
  color: #fff;
  fill: #fff;
  padding: 0.1rem 0.2rem;
}

mark.emotion-4 {
  background: #ffe9b3;
  border-radius: 0.1rem;
  padding: 0.1rem 0.2rem;
}

strong.emotion-4 {
  font-weight: bold;
}

sub.emotion-4,
sup.emotion-4 {
  font-size: 0.8em;
  vertical-align: baseline;
}

ins.emotion-4,
u.emotion-4 {
  -webkit-text-decoration-skip: ink edges;
  text-decoration-skip: ink edges;
}

i.emotion-4,
cite.emotion-4,
var.emotion-4,
em.emotion-4 {
  font-style: italic;
}

kbd.emotion-4,
pre.emotion-4,
samp.emotion-4 {
  font-family: 'SF Mono','Segoe UI Mono','Roboto Mono',Menlo,Courier,monospace;
}

.emotion-4 .fp-Icon {
  vertical-align: -0.125em;
}

.emotion-7 {
  font-size: 1.25em;
  font-weight: 600;
}

.emotion-3 {
  margin-right: 1rem;
}

.emotion-2 {
  color: #bb2a1a !important;
}

.emotion-0 {
  fill: #bb2a1a;
  position: relative;
  height: 1em;
  width: 1em;
}

<div
  aria-describedby="dialogDescription"
  aria-labelledby="dialogTitle"
  class="emotion-17 emotion-1 emotion-6 fp-Box fp-Dialog"
>
  <div
    class="emotion-11 emotion-1 emotion-6 fp-Box fp-DialogHeader"
  >
    <span
      class="emotion-7 emotion-4 emotion-1 emotion-6 fp-Box fp-Text fp-DialogTitle"
      id="dialogTitle"
    >
      <span
        class="emotion-3 emotion-4 emotion-1 emotion-6 fp-Box fp-Text fp-DialogIconWrapper"
      >
        <svg
          aria-hidden="true"
          class="emotion-0 emotion-1 emotion-2 fp-Box fp-Icon"
          role="img"
          viewBox="0 0 512 512"
        >
          <path
            d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
            fill="currentColor"
            fill-rule="evenodd"
          />
        </svg>
      </span>
      This is a dialog
    </span>
  </div>
  <div
    class="emotion-14 emotion-1 emotion-6 fp-Box fp-DialogContent"
    id="dialogDescription"
  >
    Hello world
  </div>
</div>
`;

exports[`props type should render correctly with type info 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-17 {
  border-radius: 4px;
  background-color: white;
  box-shadow: 0px 2px 4px 0px rgba(0,0,0,0.1),0px 0px 2px 1px rgba(0,0,0,0.02);
}

.emotion-14 {
  padding: 1.5rem;
}

.emotion-11 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  border-bottom: 1px solid #e6e6e6;
  padding: 1.25rem 1.5rem;
}

abbr.emotion-4 {
  border-bottom: 1px dotted;
  cursor: help;
  -webkit-text-decoration: none;
  text-decoration: none;
}

code.emotion-4 {
  font-family: monospace;
}

i.emotion-4 {
  font-style: italic;
}

kbd.emotion-4 {
  background: #454d5d;
  border-radius: 0.1rem;
  color: #fff;
  fill: #fff;
  padding: 0.1rem 0.2rem;
}

mark.emotion-4 {
  background: #ffe9b3;
  border-radius: 0.1rem;
  padding: 0.1rem 0.2rem;
}

strong.emotion-4 {
  font-weight: bold;
}

sub.emotion-4,
sup.emotion-4 {
  font-size: 0.8em;
  vertical-align: baseline;
}

ins.emotion-4,
u.emotion-4 {
  -webkit-text-decoration-skip: ink edges;
  text-decoration-skip: ink edges;
}

i.emotion-4,
cite.emotion-4,
var.emotion-4,
em.emotion-4 {
  font-style: italic;
}

kbd.emotion-4,
pre.emotion-4,
samp.emotion-4 {
  font-family: 'SF Mono','Segoe UI Mono','Roboto Mono',Menlo,Courier,monospace;
}

.emotion-4 .fp-Icon {
  vertical-align: -0.125em;
}

.emotion-7 {
  font-size: 1.25em;
  font-weight: 600;
}

.emotion-3 {
  margin-right: 1rem;
}

.emotion-2 {
  color: #1e67d5 !important;
}

.emotion-0 {
  fill: #1e67d5;
  position: relative;
  height: 1em;
  width: 1em;
}

<div
  aria-describedby="dialogDescription"
  aria-labelledby="dialogTitle"
  class="emotion-17 emotion-1 emotion-6 fp-Box fp-Dialog"
>
  <div
    class="emotion-11 emotion-1 emotion-6 fp-Box fp-DialogHeader"
  >
    <span
      class="emotion-7 emotion-4 emotion-1 emotion-6 fp-Box fp-Text fp-DialogTitle"
      id="dialogTitle"
    >
      <span
        class="emotion-3 emotion-4 emotion-1 emotion-6 fp-Box fp-Text fp-DialogIconWrapper"
      >
        <svg
          aria-hidden="true"
          class="emotion-0 emotion-1 emotion-2 fp-Box fp-Icon"
          role="img"
          viewBox="0 0 512 512"
        >
          <path
            d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
            fill="currentColor"
            fill-rule="evenodd"
          />
        </svg>
      </span>
      This is a dialog
    </span>
  </div>
  <div
    class="emotion-14 emotion-1 emotion-6 fp-Box fp-DialogContent"
    id="dialogDescription"
  >
    Hello world
  </div>
</div>
`;

exports[`props type should render correctly with type success 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-17 {
  border-radius: 4px;
  background-color: white;
  box-shadow: 0px 2px 4px 0px rgba(0,0,0,0.1),0px 0px 2px 1px rgba(0,0,0,0.02);
}

.emotion-14 {
  padding: 1.5rem;
}

.emotion-11 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  border-bottom: 1px solid #e6e6e6;
  padding: 1.25rem 1.5rem;
}

abbr.emotion-4 {
  border-bottom: 1px dotted;
  cursor: help;
  -webkit-text-decoration: none;
  text-decoration: none;
}

code.emotion-4 {
  font-family: monospace;
}

i.emotion-4 {
  font-style: italic;
}

kbd.emotion-4 {
  background: #454d5d;
  border-radius: 0.1rem;
  color: #fff;
  fill: #fff;
  padding: 0.1rem 0.2rem;
}

mark.emotion-4 {
  background: #ffe9b3;
  border-radius: 0.1rem;
  padding: 0.1rem 0.2rem;
}

strong.emotion-4 {
  font-weight: bold;
}

sub.emotion-4,
sup.emotion-4 {
  font-size: 0.8em;
  vertical-align: baseline;
}

ins.emotion-4,
u.emotion-4 {
  -webkit-text-decoration-skip: ink edges;
  text-decoration-skip: ink edges;
}

i.emotion-4,
cite.emotion-4,
var.emotion-4,
em.emotion-4 {
  font-style: italic;
}

kbd.emotion-4,
pre.emotion-4,
samp.emotion-4 {
  font-family: 'SF Mono','Segoe UI Mono','Roboto Mono',Menlo,Courier,monospace;
}

.emotion-4 .fp-Icon {
  vertical-align: -0.125em;
}

.emotion-7 {
  font-size: 1.25em;
  font-weight: 600;
}

.emotion-3 {
  margin-right: 1rem;
}

.emotion-2 {
  color: #107219 !important;
}

.emotion-0 {
  fill: #107219;
  position: relative;
  height: 1em;
  width: 1em;
}

<div
  aria-describedby="dialogDescription"
  aria-labelledby="dialogTitle"
  class="emotion-17 emotion-1 emotion-6 fp-Box fp-Dialog"
>
  <div
    class="emotion-11 emotion-1 emotion-6 fp-Box fp-DialogHeader"
  >
    <span
      class="emotion-7 emotion-4 emotion-1 emotion-6 fp-Box fp-Text fp-DialogTitle"
      id="dialogTitle"
    >
      <span
        class="emotion-3 emotion-4 emotion-1 emotion-6 fp-Box fp-Text fp-DialogIconWrapper"
      >
        <svg
          aria-hidden="true"
          class="emotion-0 emotion-1 emotion-2 fp-Box fp-Icon"
          role="img"
          viewBox="0 0 512 512"
        >
          <path
            d="M504 256c0 136.967-111.033 248-248 248S8 392.967 8 256 119.033 8 256 8s248 111.033 248 248zM227.314 387.314l184-184c6.248-6.248 6.248-16.379 0-22.627l-22.627-22.627c-6.248-6.249-16.379-6.249-22.628 0L216 308.118l-70.059-70.059c-6.248-6.248-16.379-6.248-22.628 0l-22.627 22.627c-6.248 6.248-6.248 16.379 0 22.627l104 104c6.249 6.249 16.379 6.249 22.628.001z"
            fill="currentColor"
            fill-rule="evenodd"
          />
        </svg>
      </span>
      This is a dialog
    </span>
  </div>
  <div
    class="emotion-14 emotion-1 emotion-6 fp-Box fp-DialogContent"
    id="dialogDescription"
  >
    Hello world
  </div>
</div>
`;

exports[`props type should render correctly with type warning 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-17 {
  border-radius: 4px;
  background-color: white;
  box-shadow: 0px 2px 4px 0px rgba(0,0,0,0.1),0px 0px 2px 1px rgba(0,0,0,0.02);
}

.emotion-14 {
  padding: 1.5rem;
}

.emotion-11 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  border-bottom: 1px solid #e6e6e6;
  padding: 1.25rem 1.5rem;
}

abbr.emotion-4 {
  border-bottom: 1px dotted;
  cursor: help;
  -webkit-text-decoration: none;
  text-decoration: none;
}

code.emotion-4 {
  font-family: monospace;
}

i.emotion-4 {
  font-style: italic;
}

kbd.emotion-4 {
  background: #454d5d;
  border-radius: 0.1rem;
  color: #fff;
  fill: #fff;
  padding: 0.1rem 0.2rem;
}

mark.emotion-4 {
  background: #ffe9b3;
  border-radius: 0.1rem;
  padding: 0.1rem 0.2rem;
}

strong.emotion-4 {
  font-weight: bold;
}

sub.emotion-4,
sup.emotion-4 {
  font-size: 0.8em;
  vertical-align: baseline;
}

ins.emotion-4,
u.emotion-4 {
  -webkit-text-decoration-skip: ink edges;
  text-decoration-skip: ink edges;
}

i.emotion-4,
cite.emotion-4,
var.emotion-4,
em.emotion-4 {
  font-style: italic;
}

kbd.emotion-4,
pre.emotion-4,
samp.emotion-4 {
  font-family: 'SF Mono','Segoe UI Mono','Roboto Mono',Menlo,Courier,monospace;
}

.emotion-4 .fp-Icon {
  vertical-align: -0.125em;
}

.emotion-7 {
  font-size: 1.25em;
  font-weight: 600;
}

.emotion-3 {
  margin-right: 1rem;
}

.emotion-2 {
  color: #ed9c22 !important;
}

.emotion-0 {
  fill: #ed9c22;
  position: relative;
  height: 1em;
  width: 1em;
}

<div
  aria-describedby="dialogDescription"
  aria-labelledby="dialogTitle"
  class="emotion-17 emotion-1 emotion-6 fp-Box fp-Dialog"
>
  <div
    class="emotion-11 emotion-1 emotion-6 fp-Box fp-DialogHeader"
  >
    <span
      class="emotion-7 emotion-4 emotion-1 emotion-6 fp-Box fp-Text fp-DialogTitle"
      id="dialogTitle"
    >
      <span
        class="emotion-3 emotion-4 emotion-1 emotion-6 fp-Box fp-Text fp-DialogIconWrapper"
      >
        <svg
          aria-hidden="true"
          class="emotion-0 emotion-1 emotion-2 fp-Box fp-Icon"
          role="img"
          viewBox="0 0 576 512"
        >
          <path
            d="M569.517 440.013C587.975 472.007 564.806 512 527.94 512H48.054c-36.937 0-59.999-40.055-41.577-71.987L246.423 23.985c18.467-32.009 64.72-31.951 83.154 0l239.94 416.028zM288 354c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
            fill="currentColor"
            fill-rule="evenodd"
          />
        </svg>
      </span>
      This is a dialog
    </span>
  </div>
  <div
    class="emotion-14 emotion-1 emotion-6 fp-Box fp-DialogContent"
    id="dialogDescription"
  >
    Hello world
  </div>
</div>
`;

exports[`theming Dialog.Close.root should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-3 {
  border-radius: 4px;
  background-color: white;
  box-shadow: 0px 2px 4px 0px rgba(0,0,0,0.1),0px 0px 2px 1px rgba(0,0,0,0.02);
}

.emotion-0 {
  padding: 1.5rem;
}

<div
  aria-describedby="dialogDescription"
  class="emotion-3 emotion-1 emotion-2 fp-Box fp-Dialog"
>
  <div
    class="emotion-0 emotion-1 emotion-2 fp-Box fp-DialogContent"
    id="dialogDescription"
  >
    hello world
  </div>
</div>
`;

exports[`theming Dialog.Content.root should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-3 {
  border-radius: 4px;
  background-color: white;
  box-shadow: 0px 2px 4px 0px rgba(0,0,0,0.1),0px 0px 2px 1px rgba(0,0,0,0.02);
}

.emotion-0 {
  padding: 1.5rem;
}

.emotion-0 {
  background-color: red;
}

<div
  aria-describedby="dialogDescription"
  class="emotion-3 emotion-1 emotion-2 fp-Box fp-Dialog"
>
  <div
    class="emotion-0 emotion-1 emotion-2 fp-Box fp-DialogContent"
    id="dialogDescription"
  >
    hello world
  </div>
</div>
`;

exports[`theming Dialog.Footer.root should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-8 {
  border-radius: 4px;
  background-color: white;
  box-shadow: 0px 2px 4px 0px rgba(0,0,0,0.1),0px 0px 2px 1px rgba(0,0,0,0.02);
}

.emotion-0 {
  padding: 1.5rem;
}

.emotion-5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-top: 1px solid #e6e6e6;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 1.25rem 1.5rem;
}

.emotion-5 {
  background-color: red;
}

<div
  aria-describedby="dialogDescription"
  class="emotion-8 emotion-1 emotion-2 fp-Box fp-Dialog"
>
  <div
    class="emotion-0 emotion-1 emotion-2 fp-Box fp-DialogContent"
    id="dialogDescription"
  >
    hello world
  </div>
  <div
    class="emotion-5 emotion-1 emotion-2 fp-Box fp-DialogFooter"
  >
    <div
      class="emotion-1 emotion-2 fp-Box"
    >
      This is a footer
    </div>
  </div>
</div>
`;

exports[`theming Dialog.Header.root should render correctly 1`] = `
.emotion-2 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-2:focus:not(:focus-visible) {
  outline: none;
}

.emotion-10 {
  border-radius: 4px;
  background-color: white;
  box-shadow: 0px 2px 4px 0px rgba(0,0,0,0.1),0px 0px 2px 1px rgba(0,0,0,0.02);
}

.emotion-7 {
  padding: 1.5rem;
}

abbr.emotion-1 {
  border-bottom: 1px dotted;
  cursor: help;
  -webkit-text-decoration: none;
  text-decoration: none;
}

code.emotion-1 {
  font-family: monospace;
}

i.emotion-1 {
  font-style: italic;
}

kbd.emotion-1 {
  background: #454d5d;
  border-radius: 0.1rem;
  color: #fff;
  fill: #fff;
  padding: 0.1rem 0.2rem;
}

mark.emotion-1 {
  background: #ffe9b3;
  border-radius: 0.1rem;
  padding: 0.1rem 0.2rem;
}

strong.emotion-1 {
  font-weight: bold;
}

sub.emotion-1,
sup.emotion-1 {
  font-size: 0.8em;
  vertical-align: baseline;
}

ins.emotion-1,
u.emotion-1 {
  -webkit-text-decoration-skip: ink edges;
  text-decoration-skip: ink edges;
}

i.emotion-1,
cite.emotion-1,
var.emotion-1,
em.emotion-1 {
  font-style: italic;
}

kbd.emotion-1,
pre.emotion-1,
samp.emotion-1 {
  font-family: 'SF Mono','Segoe UI Mono','Roboto Mono',Menlo,Courier,monospace;
}

.emotion-1 .fp-Icon {
  vertical-align: -0.125em;
}

.emotion-0 {
  font-size: 1.25em;
  font-weight: 600;
}

.emotion-4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  border-bottom: 1px solid #e6e6e6;
  padding: 1.25rem 1.5rem;
}

.emotion-4 {
  background-color: red;
}

<div
  aria-describedby="dialogDescription"
  aria-labelledby="dialogTitle"
  class="emotion-10 emotion-2 emotion-3 fp-Box fp-Dialog"
>
  <div
    class="emotion-4 emotion-2 emotion-3 fp-Box fp-DialogHeader"
  >
    <span
      class="emotion-0 emotion-1 emotion-2 emotion-3 fp-Box fp-Text fp-DialogTitle"
      id="dialogTitle"
    >
      This is a title
    </span>
  </div>
  <div
    class="emotion-7 emotion-2 emotion-3 fp-Box fp-DialogContent"
    id="dialogDescription"
  >
    hello world
  </div>
</div>
`;

exports[`theming Dialog.IconWrapper.root should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-3 {
  border-radius: 4px;
  background-color: white;
  box-shadow: 0px 2px 4px 0px rgba(0,0,0,0.1),0px 0px 2px 1px rgba(0,0,0,0.02);
}

.emotion-0 {
  padding: 1.5rem;
}

<div
  aria-describedby="dialogDescription"
  class="emotion-3 emotion-1 emotion-2 fp-Box fp-Dialog"
>
  <div
    class="emotion-0 emotion-1 emotion-2 fp-Box fp-DialogContent"
    id="dialogDescription"
  >
    hello world
  </div>
</div>
`;

exports[`theming Dialog.Title.root should render correctly 1`] = `
.emotion-2 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-2:focus:not(:focus-visible) {
  outline: none;
}

.emotion-10 {
  border-radius: 4px;
  background-color: white;
  box-shadow: 0px 2px 4px 0px rgba(0,0,0,0.1),0px 0px 2px 1px rgba(0,0,0,0.02);
}

.emotion-7 {
  padding: 1.5rem;
}

.emotion-4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  border-bottom: 1px solid #e6e6e6;
  padding: 1.25rem 1.5rem;
}

abbr.emotion-1 {
  border-bottom: 1px dotted;
  cursor: help;
  -webkit-text-decoration: none;
  text-decoration: none;
}

code.emotion-1 {
  font-family: monospace;
}

i.emotion-1 {
  font-style: italic;
}

kbd.emotion-1 {
  background: #454d5d;
  border-radius: 0.1rem;
  color: #fff;
  fill: #fff;
  padding: 0.1rem 0.2rem;
}

mark.emotion-1 {
  background: #ffe9b3;
  border-radius: 0.1rem;
  padding: 0.1rem 0.2rem;
}

strong.emotion-1 {
  font-weight: bold;
}

sub.emotion-1,
sup.emotion-1 {
  font-size: 0.8em;
  vertical-align: baseline;
}

ins.emotion-1,
u.emotion-1 {
  -webkit-text-decoration-skip: ink edges;
  text-decoration-skip: ink edges;
}

i.emotion-1,
cite.emotion-1,
var.emotion-1,
em.emotion-1 {
  font-style: italic;
}

kbd.emotion-1,
pre.emotion-1,
samp.emotion-1 {
  font-family: 'SF Mono','Segoe UI Mono','Roboto Mono',Menlo,Courier,monospace;
}

.emotion-1 .fp-Icon {
  vertical-align: -0.125em;
}

.emotion-0 {
  font-size: 1.25em;
  font-weight: 600;
}

.emotion-0 {
  background-color: red;
}

<div
  aria-describedby="dialogDescription"
  aria-labelledby="dialogTitle"
  class="emotion-10 emotion-2 emotion-3 fp-Box fp-Dialog"
>
  <div
    class="emotion-4 emotion-2 emotion-3 fp-Box fp-DialogHeader"
  >
    <span
      class="emotion-0 emotion-1 emotion-2 emotion-3 fp-Box fp-Text fp-DialogTitle"
      id="dialogTitle"
    >
      This is a title
    </span>
  </div>
  <div
    class="emotion-7 emotion-2 emotion-3 fp-Box fp-DialogContent"
    id="dialogDescription"
  >
    hello world
  </div>
</div>
`;

exports[`theming Dialog.root should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-0 {
  padding: 1.5rem;
}

.emotion-3 {
  border-radius: 4px;
  background-color: white;
  box-shadow: 0px 2px 4px 0px rgba(0,0,0,0.1),0px 0px 2px 1px rgba(0,0,0,0.02);
}

.emotion-3 {
  background-color: red;
}

<div
  aria-describedby="dialogDescription"
  class="emotion-3 emotion-1 emotion-2 fp-Box fp-Dialog"
>
  <div
    class="emotion-0 emotion-1 emotion-2 fp-Box fp-DialogContent"
    id="dialogDescription"
  >
    hello world
  </div>
</div>
`;
